RESOLVED FIXED22931
Using the inspector with purgeable resources leads to assertion failures
https://bugs.webkit.org/show_bug.cgi?id=22931
Summary Using the inspector with purgeable resources leads to assertion failures
Cameron Zwarich (cpst)
Reported 2008-12-19 00:05:24 PST
The inspector will get the data of a CachedResource even if it is purgeable. This is probably completely innocent in all cases, because it immediately decodes it to a new String, but it causes an assertion failure.
Attachments
Stack trace of assertion failure (13.09 KB, text/plain)
2008-12-19 01:34 PST, Cameron Zwarich (cpst)
no flags
Proposed patch (2.52 KB, patch)
2008-12-22 14:15 PST, Cameron Zwarich (cpst)
koivisto: review+
Cameron Zwarich (cpst)
Comment 1 2008-12-19 01:34:09 PST
Created attachment 26140 [details] Stack trace of assertion failure
Cameron Zwarich (cpst)
Comment 2 2008-12-22 14:15:51 PST
Created attachment 26212 [details] Proposed patch
Antti Koivisto
Comment 3 2008-12-29 16:47:13 PST
Comment on attachment 26212 [details] Proposed patch I think the web archieves have similar problem.
Cameron Zwarich (cpst)
Comment 4 2008-12-30 03:09:05 PST
Landed in r39517. I will open a new bug for the web archive issue.
David Kilzer (:ddkilzer)
Comment 5 2009-03-18 07:21:46 PDT
David Kilzer (:ddkilzer)
Comment 6 2009-03-18 08:21:26 PDT
(In reply to comment #4) > I will open a new bug for the web archive issue. See Bug 24672.
Note You need to log in before you can comment on or make changes to this bug.